# AutoMenuAIPro

./: .gitignore  CMakeLists.txt  README.md  README_Epic01_Core.md  README_Epic02_Realtime.md  README_Epic03_ToneEngine.md  README_MilestoneA_ToneDetection.md  README_MilestoneB_LiveSuggestion.md  README_MilestoneC.md  README_Settings_Install.txt  buildlog.txt
Analysis/: AnalysisEngine.cpp  AnalysisEngine.h  AnalysisManager.cpp  AnalysisManager.h  BpmDetector.cpp  BpmDetector.h  FFTAnalyzer.cpp  FFTAnalyzer.h  FFTProcessor.cpp  FFTProcessor.h  KeyDetector.cpp  KeyDetector.h  NoiseGate.cpp  NoiseGate.h  PitchDetector.cpp  PitchDetector.h  ToneEngine.cpp  ToneEngine.h  ToneStabilizer.cpp  ToneStabilizer.h
App/: Application.cpp  Application.h  MainWindow.cpp  MainWindow.h  main.cpp
Assets/Presets/: FactoryPresetManifest.xml
Assets/Presets/Broadcast/: Broadcast_FM.vspreset
Assets/Presets/Creative/: Air_Vocal.vspreset  Lo-Fi.vspreset  Radio_Voice.vspreset  Tape_Color.vspreset  Vintage_Tube.vspreset  Wide_Vocal.vspreset
Assets/Presets/Live/: Large_Stage.vspreset  Live_Band.vspreset  Live_Clean.vspreset  Live_Karaoke.vspreset  Live_Powerful.vspreset  Small_Stage.vspreset
Assets/Presets/Podcast/: Narration.vspreset  Podcast_Voice.vspreset  Speech_Clear.vspreset
Assets/Presets/Studio/: Acoustic_Vocal.vspreset  Bright_Female.vspreset  Clean_Vocal.vspreset  Deep_Male.vspreset  Male_Rock.vspreset  Modern_Pop.vspreset  Rap_Vocal.vspreset  Soft_Female.vspreset  Vocal_Glue.vspreset  Warm_Ballad.vspreset
Audio/: AudioEngine.cpp  AudioEngine.h  AudioRingBuffer.cpp  AudioRingBuffer.h
Beta/: BETA_README.md  BetaFeedbackForm.md  BetaIssueTracker.csv  BetaTestMatrix.csv
Core/: AnalysisTypes.h  AutoMenuCore.cpp  AutoMenuCore.h  AutomationEngine.cpp  AutomationEngine.h  AutomationTypes.h  CoreController.cpp  CoreController.h  MacroManager.cpp  MacroManager.h  RealtimeAnalysisState.h  RealtimeToneState.h  SuggestionEngine.cpp  SuggestionEngine.h  SuggestionTypes.h
Cubase/: CubaseManager.cpp  CubaseManager.h  MidiCommandQueue.cpp  MidiCommandQueue.h  MidiDeviceManager.cpp  MidiDeviceManager.h
Docs/: CHANGELOG.md  Commercial_Release_Checklist.md  Distribution_Checklist.md  EULA_DRAFT.md  Epic01_Commercial_GUI_Redo.md  Epic02_DSP_Core.md  Epic03A_Analog_Front_End.md  Epic03B_Professional_Gate.md  Epic03C_Commercial_EQ.md  Epic03D_Commercial_DeEsser.md  Epic03E_1176_LA2A_Compressor.md  Epic03F_Analog_Color.md  Epic03G_Output_Stage.md  Epic04A_DSP_Optimization.md  Epic04B_Professional_Metering.md  Epic04C_Preset_System.md  Epic04D_Commercial_GUI.md  Epic04E_Validation_QA.md  Epic04F_Release_Candidate.md  Epic05A_Factory_Presets.md  Epic05B_User_Manual.md  Epic05C_Installer_Packaging.md  Epic05D_Licensing_Trial.md  Epic05E_Beta_Test.md  Epic05F_Commercial_Release.md  HostSetup.md  PresetGuide.md  QuickStart.md  Release_Checklist.md  Sprint02_GUI.md  Sprint03_GUI_Professional.md  Sprint04_Production_GUI.md  Sprint05_GUI_Infrastructure.md  Sprint06A_GUI_Polish.md  Sprint07_MockupLayout.md  Sprint08_Commercial_GUI.md  Sprint09_Professional_Assets.md  Sprint10_Commercial_GUI_Rewrite.md  Store_Page_Copy.md  Support_Policy.md  (+3 more)
Installer/: Install_VST3_System.ps1  Install_VST3_User.ps1  README_Installer.md  Uninstall_VST3.ps1
License/: ACTIVATION_GUIDE.md  LICENSE_TRIAL.md
Package/: README_Package.md
Scripts/: BuildLog.ps1  CleanBuild.ps1  CopyVST3_UserFolder.ps1  Generate_Offline_Key.ps1  Host_QA_Checklist.md  Package_Commercial.ps1  Package_Commercial_v1.ps1  Package_RC.ps1  Prepare_Beta_Package.ps1  Run_Beta_SmokeTest.ps1  SmokeTest_RC.ps1  Validate_Epic4E.ps1  Verify_Commercial_Release.ps1  Verify_Package.ps1
Source/: PluginEditor.cpp  PluginEditor.h  PluginEntry.cpp  PluginProcessor.cpp  PluginProcessor.h
Source/Core/: LicenseManager.cpp  LicenseManager.h  PluginState.cpp  PluginState.h  PresetManager.cpp  PresetManager.h  ReleaseInfo.h  ValidationReport.h
Source/DSP/: CompressorModule.cpp  CompressorModule.h  DeEsserModule.cpp  DeEsserModule.h  DspModuleBase.h  DspUtilities.h  EqModule.cpp  EqModule.h  GateModule.cpp  GateModule.h  HiEndModule.cpp  HiEndModule.h  OutputModule.cpp  OutputModule.h  PreampModule.cpp  PreampModule.h  ProfessionalMetering.h  SaturationModule.cpp  SaturationModule.h
Source/DSP/Engine/: DspEngine.cpp  DspEngine.h
Source/GUI/: ChannelStripEditor.cpp  ChannelStripEditor.h  Theme.cpp  Theme.h  ThemeManager.h
Source/GUI/Components/: BottomMeterBar.cpp  BottomMeterBar.h  Knob.cpp  Knob.h  LevelMeter.cpp  LevelMeter.h  ModulePanel.cpp  ModulePanel.h  TopBar.cpp  TopBar.h
Source/GUI/Controls/: GuiMeterModel.h  GuiPerformance.h  GuiScale.h  KeyboardCommandHub.h  PopupValue.cpp  PopupValue.h  TooltipManager.cpp  TooltipManager.h
Source/GUI/Layout/: ChannelStripLayout.h
Source/GUI/LookAndFeel/: MainLookAndFeel.cpp  MainLookAndFeel.h
Source/Parameters/: ParameterLayout.cpp  ParameterLayout.h
UI/Bridge/: ToneAnalysisBridge.cpp  ToneAnalysisBridge.h
UI/Dashboard/: Dashboard.cpp  Dashboard.h
UI/Footer/: FooterComponent.cpp  FooterComponent.h
UI/Header/: HeaderComponent.cpp  HeaderComponent.h
UI/Panels/MacroPanel/: MacroPanelComponent.cpp  MacroPanelComponent.h
UI/Panels/MixerPanel/: MixerPanelComponent.cpp  MixerPanelComponent.h
UI/Panels/OutputMeterPanel/: OutputMeterComponent.cpp  OutputMeterComponent.h
UI/Panels/TonePanel/: ToneDetectorComponent.cpp  ToneDetectorComponent.h
UI/Settings/: SettingsPanel.cpp  SettingsPanel.h
UI/Theme/: AppTheme.cpp  AppTheme.h
Utils/: AppLogger.cpp  AppLogger.h
Workspace/: TonePresetMapping.cpp  TonePresetMapping.h  WorkspaceState.cpp  WorkspaceState.h
